@@ -6,6 +6,15 @@
   functionality was lost (plotting and clustering) but may be added
   back on popular demand.
 
+* Major improvement in trio-dnm calling model. Originally it used genotype
+  likelihoods (PLs) as the input for calling, which is flawed because PLs
+  make assumptions which are unsuitable for de novo calling: PL(RR) can become
+  bigger than PL(RA) even when the ALT allele is present in the parents. 
+  The new (experimental) model uses a new FORMAT/AQ annotation which can be
+  generated by mpileup. The old behavior can be evoked by running +trio-dnm
+  with the --no-AQ option.
+
+
 ## Release 1.10.2 (19th December 2019)
 
 This is a release fix that corrects minor inconsistencies discovered in
